# dot-dict

./: README.md  pyproject.toml
dot_dict/: dot_dict.py
